# post_prac

./: .gitignore  CLAUDE.md  README.md
backend/: pyproject.toml
backend/apps/: api.py  main.py
backend/apps/auth/: dependencies.py  repository.py  router.py  service.py
backend/apps/auth/models/: entities.py  schemas.py
backend/apps/contact/: router.py  service.py
backend/apps/contact/models/: schemas.py
backend/apps/post/: repository.py  router.py  service.py
backend/apps/post/models/: entities.py  schemas.py
backend/apps/user/: repository.py
backend/apps/user/models/: entities.py  enums.py
backend/common/: response.py
backend/core/: config.py  database.py  email.py  s3.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.css  App.jsx  index.css
frontend/src/api/: authApi.js  authFetch.js  contactApi.js  postApi.js
frontend/src/auth/: tokenStorage.js
frontend/src/components/: KakaoMap.jsx  MessageDialog.jsx  PostEditor.jsx  PostForm.jsx  RequireAuth.jsx  SiteHeader.jsx
frontend/src/pages/: AboutPage.jsx  ContactPage.jsx  ContactWritePage.jsx  LoginPage.jsx  PlaceholderPage.jsx  PostDetailPage.jsx  PostEditPage.jsx  PostListPage.jsx  PostWritePage.jsx  SignUpPage.jsx
frontend/src/utils/: loadKakaoMapsSdk.js
md/: about.md  post.md
