[project]
name = "backend"
version = "0.1.0"
description = ""
authors = [
    {name = "CDR4733",email = "shsing2@naver.com"}
]
requires-python = ">=3.14"
dependencies = [
    "ruff (>=0.15.20,<0.16.0)",
    "uvicorn (>=0.49.0,<0.50.0)",
    "fastapi (>=0.139.0,<0.140.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "motor (>=3.7.1,<4.0.0)",
    "boto3 (>=1.35.0,<2.0.0)",
    "python-multipart (>=0.0.18,<0.1.0)",
    "bcrypt (>=5.0.0,<6.0.0)",
    "pyjwt (>=2.13.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
# 🌟 자바스크립트의 printWidth와 동일한 설정입니다.
# 파이썬 공식 표준 가이드(PEP 8)의 대중적인 기준인 79글자로 세팅합니다. (원하시면 80이나 88로 변경 가능)
line-length = 79

[tool.ruff.lint]
# 코드를 더 깔끔하게 강제하기 위한 린트 규칙 활성화 (선택 사항)
select = ["E", "F", "I"]
